--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,5 +1,13 @@
 @font-face {
   font-family: "Pretendard";
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+  src: url("/fonts/Pretendard-Medium.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Pretendard";
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -8,8 +16,24 @@
 
 @font-face {
   font-family: "Pretendard";
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src: url("/fonts/Pretendard-Bold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Pretendard";
   font-weight: 900;
   font-style: normal;
   font-display: swap;
   src: url("/fonts/Pretendard-Black.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url("/fonts/Pretendard-Regular.woff2") format("woff2");
 }
