--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,13 @@
     width: 100%;
   }
 
+  .snap-section-center {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+    min-height: 100vh;
+    width: 100%;
+  }
+
   .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
