fix/qna: Q&A 행간, 자간 조정

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@
     font-weight: 500;
     font-size: 15px;
     color: #c56908;
+    line-height: 29px;
   }
 
   /* Mobile: Match answer text size (12px) */
